[package]
name = "blockchain_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "lattice_macro",
    "lattice_contract_macro",
]

[dependencies]
lattice_macro = { path = "lattice_macro" }
lattice_contract_macro = { path = "lattice_contract_macro" }